# gneurshk-lang

./: .gitignore  Cargo.toml  README.md  format.md
.github/: FUNDING.yml
analyzer/: Cargo.toml
analyzer/src/: assignment.rs  binary_expression.rs  block.rs  declaration.rs  errors.rs  function_call.rs  identifier.rs  lib.rs  literal.rs  scope.rs  variables.rs
cli/: Cargo.toml
cli/src/: main.rs  steps.rs  watcher.rs
compiler/: .gitignore  Cargo.toml
compiler/src/: codegen.rs  lib.rs
compiler/src/codegen/: assignment.rs  binary_expression.rs  block.rs  declaration.rs  function_call.rs  function_declaration.rs  identifier.rs  if_statement.rs  literal.rs  loops.rs  mod.rs  return_statement.rs  scope.rs  strings.rs  unary_expression.rs
compiler/src/output/: executable.rs  ir.rs  mod.rs  object.rs
compiler/tests/: a_loop.iv  add_two_numbers_with_function.iv  arithmetic.iv  factorial.iv  fibonacci.iv  if_else_finally_statement.iv  if_else_statement.iv  if_finally_statement.iv  if_statement.iv  multiple_println_statements.iv  nested_loops.iv  pass_if_finally_statement.iv  print_multiple_values.iv
lexer/: Cargo.toml
lexer/src/: lib.rs  tokens.rs
lexer/tests/: comments_are_ignored.iv  strings.iv
parser/: Cargo.toml
parser/src/: assignments.rs  block.rs  expressions.rs  funcs.rs  identifiers.rs  ifs.rs  imports.rs  lib.rs  loops.rs  returns.rs  strings.rs  types.rs  variables.rs
src/: lexer.rs  main.rs  parser.rs  tokenize.rs  tokens.rs
vscode-extension/: CHANGELOG.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
(+84 files in other folders)
