[package]
name = "gneurshk_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
gneurshk_compiler = { path = "../compiler" }
gneurshk_analyzer = { path = "../analyzer" }
gneurshk_parser = { path = "../parser" }
gneurshk_lexer = { path = "../lexer" }

anyhow.workspace = true
clearscreen = "4.0.1"
console = "0.16.3"
notify = "8.0.0"
indicatif = "0.18.0"
clap = "4.5.54"
