[package]
name = "gneurshk_compiler"
version = "0.1.0"
edition = "2024"

[lib]
name = "gneurshk_compiler"
path = "src/lib.rs"

[dependencies]
gneurshk_parser = { path = "../parser" }
gneurshk_lexer = { path = "../lexer" }

anyhow.workspace = true
inkwell = { version = "0.9.0", features = ["llvm21-1"] }
